<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="200dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:background="@drawable/button_red">

        <ImageView
            android:id="@+id/dialog_close"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:padding="12dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/welfare_rule_close"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"
            android:text="@string/rule_title"
            android:textColor="@color/gold"
            android:textSize="@dimen/main_text_xlarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/title"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="80dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:minHeight="40dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rule_one"
                android:textColor="@color/gold"
                android:textSize="@dimen/main_text_default" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rule_two"
                android:textColor="@color/gold"
                android:textSize="@dimen/main_text_default" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rule_three"
                android:textColor="@color/gold"
                android:textSize="@dimen/main_text_default" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rule_four"
                android:textColor="@color/gold"
                android:textSize="@dimen/main_text_default" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="13dp"
                android:text="@string/rule_tip"
                android:textColor="@color/gold"
                android:textSize="@dimen/main_text_small" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>