<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="200dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:scrollbars="vertical">

        <TextView

            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/prompt"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:minHeight="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/exit_app"
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_text_default"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#D1D1D1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_btn_select"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/cancel"
                android:textColor="@color/btntextcolor"
                android:textSize="@dimen/main_text_default"/>

            <LinearLayout
                android:id="@+id/single_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D1D1D1"
                android:orientation="horizontal"/>

            <Button
                android:id="@+id/neutral_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_btn_select"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/dismiss"
                android:textColor="@color/btntextcolor"
                android:textSize="@dimen/main_text_default"/>

            <LinearLayout
                android:id="@+id/second_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D1D1D1"
                android:orientation="horizontal"/>

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/right_btn_select"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/confirm"
                android:textColor="@color/btntextcolor"
                android:textSize="@dimen/main_text_default"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>