<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dip" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/margin_size_default"
                android:paddingBottom="@dimen/margin_size_default">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_size_large"
                    android:text="@string/recharge_text1"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/main_text_default" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="0dip" >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:background="@color/linegray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="53dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_size_large"
                        android:text="@string/recharge_text2"
                        android:textColor="@color/txt_gray"
                        android:textSize="@dimen/main_text_default" />

                    <EditText
                        android:id="@+id/username"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="40dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dip"
                        android:layout_marginRight="15dip"
                        android:background="@android:color/white"
                        android:hint="@string/recharge_text3"
                        android:paddingLeft="10dip"
                        android:text=""
                        android:textColor="@color/txt_black"
                        android:textSize="@dimen/main_text_default" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/linegray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="53dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_size_large"
                        android:text="@string/recharge_text4"
                        android:textColor="@color/txt_gray"
                        android:textSize="@dimen/main_text_default" />

                    <EditText
                        android:id="@+id/idcard"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dip"
                        android:layout_marginRight="15dip"
                        android:background="@android:color/white"
                        android:hint="@string/recharge_text5"
                        android:paddingLeft="10dip"
                        android:text=""
                        android:textColor="@color/txt_black"
                        android:textSize="@dimen/main_text_default" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_size_default"
                android:paddingBottom="@dimen/margin_size_default">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_size_large"
                    android:text="@string/recharge_text6"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/main_text_default" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="0dip" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:background="@color/linegray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="53dp">

                    <TextView
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/recharge_margin_left"
                        android:text="@string/recharge_text7"
                        android:textColor="@color/txt_gray"
                        android:textSize="@dimen/main_text_default" />

                    <LinearLayout
                        android:id="@+id/select_bank"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/recharge_margin_right"
                        android:background="@android:color/white"
                        android:paddingLeft="10dip" >

                        <TextView
                            android:id="@+id/txt_choose_bank"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:gravity="left|center_vertical"
                            android:hint="@string/recharge_text8"
                            android:textSize="@dimen/main_text_default" />

                        <RelativeLayout
                            android:id="@+id/layout_choosed_bank"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical" >

                            <ImageView
                                android:id="@+id/bank_icon"
                                android:layout_width="33dp"
                                android:layout_height="33dp"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true" />

                            <TextView
                                android:id="@+id/bank_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dip"
                                android:layout_marginLeft="5dp"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@+id/bank_icon"
                                android:textColor="@color/txt_black"
                                android:textSize="16sp" />

                            <ImageView
                                android:id="@+id/select_down"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="10dip"
                                android:background="@drawable/ind" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/linegray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="53dp">

                    <TextView
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/recharge_margin_left"
                        android:text="@string/recharge_text9"
                        android:textColor="@color/txt_gray"
                        android:textSize="@dimen/main_text_default" />

                    <EditText
                        android:id="@+id/bankcardcode"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="40dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/recharge_margin_right"
                        android:background="@android:color/white"
                        android:hint="@string/recharge_text10"
                        android:paddingLeft="10dip"
                        android:digits="0123456789"
                        android:text=""
                        android:textColor="@color/txt_black"
                        android:textSize="@dimen/main_text_default" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/linegray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="53dp">
                    <TextView
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/recharge_margin_left"
                        android:text="预留手机号"
                        android:textColor="@color/txt_gray"
                        android:textSize="@dimen/main_text_default" />
                    <EditText
                        android:id="@+id/bankcard_phone"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="40dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/recharge_margin_right"
                        android:background="@android:color/white"
                        android:digits="0123456789"
                        android:hint="请输入预留手机号"
                        android:paddingLeft="10dip"
                        android:text=""
                        android:textColor="@color/txt_black"
                        android:textSize="@dimen/main_text_default" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/linegray"/>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/error_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone" >
                <TextView
                    android:id="@+id/error_tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    android:text="错误信息"/>
            </RelativeLayout>
            <Button
                android:id="@+id/authentication_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="28dip"
                android:layout_marginRight="28dp"
                android:layout_marginTop="@dimen/margin_size_rather_large"
                android:background="@drawable/button_red_selector"
                android:gravity="center"
                android:text="@string/authentication_button"
                android:textColor="@color/white"
                android:textSize="@dimen/recharge_buttonsize" />
            <TextView
                android:id="@+id/customer_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_size_default"
                android:layout_marginLeft="28dp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="@dimen/main_text_small"
                android:text="认证有问题，客服帮您解决"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>